feat: 보상트랜잭션 설정